syntax = "proto3";

option go_package = "payment/grpc";

package entpaymentance;

service PaymentService {
    rpc RecordTransaction(RecordTransactionRequest) returns (RecordTransactionResponse);
    rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message RecordTransactionRequest {
    string user_id = 1;
    string user_name = 2;
    string type = 3;
    string paymentmethod = 4;
    string checkin_time = 5;
    string checkout_time = 6;
}

message RecordTransactionResponse {
    string message = 1;
    string code = 2;
}

message ProcessPaymentRequest {
    string user_id = 1;
    string user_name = 2;
    string type = 3;
    string paymentmethod = 4;
    string checkin_time = 5;
    string checkout_time = 6;
}

message ProcessPaymentResponse {
    string message = 1;
    string code = 2;
}
